--- a/conference/LinuxPlumbers2018/presentation_notes.org
+++ b/conference/LinuxPlumbers2018/presentation_notes.org
@@ -258,9 +258,9 @@ XDP is a core kernel layer building block
  - Open Source projects should build and innovate on top
  - Only time will tell what people use it for
 
-Directions we hope to see XDP used
+Directions we hope to see XDP used for
  - Faster delivery into Guest-OS
-   - Basically possible via 1-copy via tuntap driver into virtio_net
+   - Already possible via 1-copy via tuntap driver into virtio_net
    - The AF_XDP approach might offer zero-copy
 
 P4 vs eBPF/XDP is a wrong attitude
@@ -407,9 +407,29 @@ releases, where only 3 HW-drivers have implemented XDP_REDIRECT.
 
 ** Topic: NIC memory models and DMA mapping
 
-   Does Bulk xdp_frame_return fit here?
+XDP recently (v4.18) got support for different memory models per driver
+RX-queue, via the xdp_return_frame() and xdp_rxq_info_reg_mem_model() APIs.
 
-** Slide: Spectra-V2: mitigation killed XDP performance
+This allow drivers to innovate new memory models, but also gives the
+opportunity to generalize and share common code to handle memory recycle
+schemes for drivers.  The page_pool is one example common code.
+
+We want to see more drivers need to use page_pool, and work on page_pool is
+needed, especially in the area of keeping frames DMA mapped.
+
+We plan to extend the xdp_return_frame API with a bulking option, because it
+can naturally do bulking at DMA-TX completion, and the page_pool need this to
+handle a known weakness (of concurrent CPUs returning frames to the same
+RX-queue).
+
+
+On Intel machines the DMA map/unmap/sync operation are very lightweight, as due
+the coherency model, this might not be true for other architectures.  As XDP
+have been very Intel focused, the DMA overhead have seen much attention. The
+Spectre-V2 mitigation changed the picture. and will force us to address the DMA
+overhead issues due to the indirect call API.
+
+** Slide: Spectre-V2: mitigation killed XDP performance
 
    This is primary due to DMA-API, what uses indirect call to abstract
    different DMA-engines.
