--- a/conference/LinuxPlumbers2018/presentation_notes.org
+++ b/conference/LinuxPlumbers2018/presentation_notes.org
@@ -180,6 +180,8 @@ Guiding principle: Adding features must not negatively affect baseline XDP
 performance.  Use optimization technique of moving runtime checks to setup time
 checks.
 
+
+
 ** Slide: New XDP features and performance requirement
 
 XDP is all about performance
@@ -374,26 +376,26 @@ releases, where only 3 HW-drivers have implemented XDP_REDIRECT.
 
 ** Topic: (Usability related) XDP_REDIRECT entangled with ndo_xdp_xmit.
 
-   Decouple XDP_REDIRECT from ndo_xdp_xmit.
-   This mostly technical, but also related to usability.
+Decouple XDP_REDIRECT from ndo_xdp_xmit.
+This mostly technical, but also related to usability.
 
-   Upstream sees XDP_REDIRECT driver support related to also supporting
-   ndo_xdp_xmit.  IHMO these two functions are actually separate.  The
-   XDP_REDIRECT action can be used completely without ndo_xdp_xmit, e.g for
-   CPU-map redirect.
+When XDP redirecting a frame out another net_device, then the drivers
+ndo_xdp_xmit function is called.  But device drivers don't enable ndo_xdp_xmit
+by default, because it costs many resource (TX queue per CPU core).  There is
+no interface to enable ndo_xdp_xmit.  The current solution, to enable
+ndo_xdp_xmit, is to load an dummy XDP program on the device, you want to
+redirect to.
 
-   Sample redirect code (currently) loads a dummy XDP program on the TX device,
-   in-order to enable ndo_xdp_xmit, as enabling ndo_xdp_xmit requires the
-   driver to allocate extra HW TX-resources.
+The implicit notion of loading an XDP program, also implies allocating
+resources to XDP-TX queues is flawed.  As the XDP user, might not want to use
+any redirect feature.  And even if using XDP_REDIRECT this could be CPU-map
+redirect, which does not need XDP-TX queues.
 
-   The problem of enabling ndo_xdp_xmit on a driver is the HW resources it
-   consumes, and the user might not even need the feature.  XDP-core assumes
-   NIC driver allocates one dedicated TX-queue per CPU core in the system.
-   This is wasting HW resources, and might not even be possible on systems with
-   many CPU cores.
+The reason for only enable XDP-TX queues when really needed is that this
+consumes HW resources.  Given the TX queue per CPU core assumption, this makes
+it problematic on systems with many CPU cores. E.g. it was discovered the ixgbe
+driver cannot load XDP on systems with more than 96 CPU cores.
 
-   E.g. it was discovered the ixgbe cannot be used on systems with more than 96
-   CPU cores.
 
 ** Topic: QoS and Rate Transitions
 
