--- a/conference/LinuxPlumbers2018/presentation_notes.org
+++ b/conference/LinuxPlumbers2018/presentation_notes.org
@@ -377,6 +377,21 @@ consumes HW resources.  Given the TX queue per CPU core assumption, this makes
 it problematic on systems with many CPU cores. E.g. it was discovered the ixgbe
 driver cannot load XDP on systems with more than 96 CPU cores.
 
+** Slide: Controlling resources for ndo_xdp_xmit
+
+Redirecting XDP frame out another net_device, call ndo_xdp_xmit
+ - But egress net_device don't default alloc XDP-TX resouces
+   - Reason#1: consumes HW resources, 1 TX-queue per CPU core
+   - Reason#2: cannot know it will be used for XDP traffic
+
+We need proper API for enabling XDP-TX resources on egress net_device
+ - Current hack, load dummy XDP prog on egress dev
+ - Would be natural to, alloc TX resources when dev added to DEVMAP
+ - But how to handle non-map redirect variant?
+
+This implicit XDP-TX resources allocation when loading XDP
+ - is wasting HW resources when XDP doesn't need ndo_xdp_xmit
+
 ** Topic: Usability: User Experience and Debugging
 
 Lots of small unexpected behavior, seen from normal users of XDP.
