Some notes for Jumbo-Frames
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/presentation_notes.org
+++ b/conference/LinuxPlumbers2018/presentation_notes.org
@@ -193,7 +193,9 @@ Guiding principle: New features must not negatively affect baseline XDP perf
 (Topic text) People in XDP-newbies list request jumbo-frames. They don't seem
 to understand to support high-speed packet processing, we cannot support this
 feature.  Besides killing performance, jumbo-frames will also make it more
-difficult to move-SKB-alloc out of drivers.
+difficult to move-SKB-alloc out of drivers.  That said, if it is possible to
+support Jumbo-Frames without hurting performance, then it could be accepted,
+but that will be very difficult.
 
 Understand: RX-ring cannot know packet length, must have room for MTU
  - XDP requires packet mapped in physical continuous memory
@@ -204,6 +206,7 @@ Hybrid solution: Only grant XDP access to top 4K
  - Above 4K can be in other pages
  - This will kill, moving SKB allocations out of driver plan
    (makes it complicated and thus affect performance)
+
 
 ** Topic: Evolving XDP
 
